--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "@react-native-community/datetimepicker": "3.5.2",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "axios": "^0.21.1",
     "expo": "~42.0.1",
+    "expo-camera": "~11.2.2",
     "expo-cli": "^4.11.0",
+    "expo-image-picker": "~10.2.2",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.8.1",
@@ -24,9 +27,7 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-unimodules": "~0.14.5",
-    "react-native-web": "~0.13.12",
-    "expo-camera": "~11.2.2",
-    "expo-image-picker": "~10.2.2"
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
