--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/datetimepicker": "3.5.2",
-    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.1.0",
     "axios": "^0.21.1",
     "expo": "~42.0.1",
@@ -26,6 +26,7 @@
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-unimodules": "~0.14.5",
     "react-native-web": "~0.13.12"
   },
